kbd-chooser (0.48) UNRELEASED; urgency=low

  * Alastair McKinstry
    - findfile.c: re-include code to decompress keymaps.
      Needed to minimise memory usage.

 -- Alastair McKinstry <mckinstry@debian.org>  Sun, 28 Mar 2004 21:11:16 +0100

kbd-chooser (0.47) unstable; urgency=high

  * Alastair McKinstry
    - Fix regression: ensure console-archs always returns a value,
      Closes: #240171.
    - Improved AT-type keyboard detection on 2.6 kernels.
    - Don't offer mac USB keymaps on non-mac USB keyboards.
  * Translations:
    - Bosnian (bs.po) by Safir Šećerović

 -- Alastair McKinstry <mckinstry@debian.org>  Fri, 26 Mar 2004 23:07:41 +0000

kbd-chooser (0.46) unstable; urgency=high

  * Updated translations: 
    - Indonesian (id.po) by Parlin Imanuel Toh
    - Turkish (tr.po) by Osman Yüksel
  * Alastair McKinstry 
    - When using a serial console, ask "keyboard arch" question at low
      priority, defaulting to "none". Closes: #231219.
    - Also try to detect serial consoles from /proc/cmdline, to deal with
      UARTs that don't support TIOCGSERIAL.
    
 -- Alastair McKinstry <mckinstry@debian.org>  Tue, 23 Mar 2004 21:32:00 +0000

kbd-chooser (0.45) unstable; urgency=low

  * Updated translation
    - Russian by Nikolai Prokoschenko

 -- Joey Hess <joeyh@debian.org>  Sun, 14 Mar 2004 13:41:03 -0500

kbd-chooser (0.44) unstable; urgency=low

  * Alastair McKinstry
    - Avoid segfault when we didn't pick a preferred keyboard. 
    Closes: #234513.
    - Ensure mac keyboards are included on powerpc architectures
    - *-kbd.c: Fix minor memory leak.
    - Disable usb detection code for powerpc for the moment.

 -- Alastair McKinstry <mckinstry@debian.org>  Sat, 13 Mar 2004 09:12:23 +0000

kbd-chooser (0.43) unstable; urgency=low

  * Translations:
    - Giuseppe Sacco
      - Updated italian translation by Davide Viti (it.po)
    - Ognyan Kulev
      - Updated Bulgarian translation (bg.po).
    - Dafydd Harries : Added Welsh translation (cy.po)
