@@ -3,6 +3,7 @@ kbd-chooser (0.48) UNRELEASED; urgency=low
   * Alastair McKinstry
     - findfile.c: re-include code to decompress keymaps.
       Needed to minimise memory usage.
+    - Add Initial DEC keyboard support for mipsel.
 
  -- Alastair McKinstry <mckinstry@debian.org>  Sun, 28 Mar 2004 21:11:16 +0100
 
